--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Food Constract</h1>
+        <h1>Food Construct</h1>
         <nav>
-            <a href="#about">О нас</a>
-            <a href="#">Собрать ланч</a>
+            <a class="active" href="#about">О нас</a>
+            <a href="./make_lunch.html">Собрать ланч</a>
             <a href="#popular">Заказы</a>
             <a href="#contacts">Контакты</a>
         </nav>
