--- a/make_lunch.html
+++ b/make_lunch.html
@@ -140,23 +140,23 @@
             <p class="order_and_data">Ваши данные</p>
             <label for="name">
               <p>Имя</p>
-              <input type="text" id="name" required>
+              <input type="text" id="name" name="name" required>
             </label>
             <label for="email">
               <p>Email</p>
-              <input type="email" id="email" required>
+              <input type="email" id="email" name="email" required>
             </label>
             <label class="checkbox_radio" for="information">
-              <input type="checkbox" id="information" checked>
+              <input type="checkbox" id="information" name="information" checked>
               <p>Получать информацию о скидках и акциях</p>
             </label>
             <label for="phone">
               <p>Номер телефона </p>
-              <input type="tel" id="phone" required>
+              <input type="tel" id="phone" name="phone" required>
             </label>
             <label for="address">
               <p>Адрес доставки</p>
-              <input type="text" id="address" required>
+              <input type="text" id="address" name="address" required>
               <p><em>Доставка осуществляется только по Москве</em></p>
             </label>
             <div class="time">
@@ -172,7 +172,7 @@
             </div>
             <label for="time_delivery">
               <p>Укажите время доставки</p>
-              <input type="time" id="time_delivery" min="07:00" max="23:00" step="300" required>
+              <input type="time" name="time_delivery" id="time_delivery" min="07:00" max="23:00" step="300" required>
               <p><em>Доступное время доставки с 7:00 до 23:00</em></p>
             </label>
             <div class="order_buttons">
