--- a/make_lunch.html
+++ b/make_lunch.html
@@ -16,7 +16,7 @@
         <a href="./index.html">О нас</a>
         <a class="active" href="./make_lunch.html">Собрать ланч</a>
         <a href="./order.html">Оформить заказ</a>
-        <a href="#popular">Заказы</a>
+        <a href="./order_history.html">Заказы</a>
         <a href="#contacts">Контакты</a>
     </nav>
   </header>
@@ -160,6 +160,5 @@
   <script type="module" src="make_lunch.js"></script>
   <script type="module" src="notifications.js"></script>
   <script type="module" src="load_dishes.js"></script>
-  <script type="module" src="make_order.js"></script>
 </body>
 </html>
