--- a/order.html
+++ b/order.html
@@ -17,7 +17,7 @@
         <a href="./index.html">О нас</a>
         <a href="./make_lunch.html">Собрать ланч</a>
         <a class="active" href="./order.html">Оформить заказ</a>
-        <a href="#popular">Заказы</a>
+        <a href="./order_history.html">Заказы</a>
         <a href="#contacts">Контакты</a>
     </nav>
   </header>
@@ -137,7 +137,6 @@
   <footer id="contacts">
     <p>Позвонить нам +7-000-000-00-00</p>
   </footer>
-  </main>
   <script type="module" src="load_dishes.js"></script>
   <script type="module" src="notifications.js"></script>
   <script type="module" src="order.js"></script>
