--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="active" href="#about">О нас</a>
             <a href="./make_lunch.html">Собрать ланч</a>
             <a href="./order.html">Оформить заказ</a>
-            <a href="#popular">Заказы</a>
+            <a href="./order_history.html">Заказы</a>
             <a href="#contacts">Контакты</a>
         </nav>
     </header>
