--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="./order.html">Оформить заказ</a>
             <a href="./order_history.html">Заказы</a>
             <a href="#contacts">Контакты</a>
+            <a href="./lending.html">Лэндинг</a>
         </nav>
     </header>
     <main>
