--- a/order_history.html
+++ b/order_history.html
@@ -151,11 +151,11 @@
           </div>
           <h5 id="price-input"></h5>
         </div>
+        <div class="modalWindow"></div>
         <div class="mod_but">
           <button class="cancel">Отмена</button>
           <button id="save">Сохранить</button>
         </div>
-        <div class="modalWindow"></div>
     </div>
   </div>
   <header>
@@ -166,6 +166,7 @@
         <a href="./order.html">Оформить заказ</a>
         <a class="active" href="./order_history.html">Заказы</a>
         <a href="#contacts">Контакты</a>
+        <a href="./lending.html">Лэндинг</a>
     </nav>
 </header>
   <main>
