--- a/order.html
+++ b/order.html
@@ -19,6 +19,7 @@
         <a class="active" href="./order.html">Оформить заказ</a>
         <a href="./order_history.html">Заказы</a>
         <a href="#contacts">Контакты</a>
+        <a href="./lending.html">Лэндинг</a>
     </nav>
   </header>
   <main>
